fix: allows name to wrap in profile (upto 2 lines)

--- a/src/features/user/MFV2/ProfileCard/ProfileCard.module.scss
+++ b/src/features/user/MFV2/ProfileCard/ProfileCard.module.scss
@@ -47,11 +47,20 @@
   align-items: center;
   justify-content: center;
   margin-bottom: 20px;
+  gap: 10px;
 
   h2 {
     font-size: 2rem;
     font-weight: 700;
-    white-space: nowrap;
+    line-height: 120%;
+    padding-right: 4px;
+    text-align: center;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2; /* number of lines to show */
+    line-clamp: 2;
+    -webkit-box-orient: vertical;
   }
 
   p {
